Overhauled home page

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <!-- Start Header Section -->
     <div class="header">
       <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
-      <button class="openbtn" onclick="openNav()"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"></button>
+      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"></button>
       <center>
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
       </center>
-      <a href="#" class="btn-toggle"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg"></a>
+      <a href="javascript:void(0)" class="btn-toggle" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg"></a>
       <div id="websidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton"></a>
         <a href="index.html" class="sidebar-link">home</a>
@@ -101,6 +101,7 @@
 
 
     <!-- Back to Top button copied from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
+    <!-- Disabled 
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script>
 
@@ -124,7 +125,7 @@
         document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
       }
 
-    </script>
+    </script> -->
     <!-- End Back to Top button -->
 
 
@@ -150,9 +151,108 @@
     <center><hr class="vertical-section-divider"></center>
 
     <section class="about">
-      
+      <br><br>
+      <center><p class="about-header">About Me</p>
+        <br><br>
+      <p class="about-me-bio">
+        I started learning software development back in 2021 when I was curious about how the games that I enjoyed were made. This lead me to download <u><a href="https://unity.com" class="standard-link">Unity</a></u> and begin following the courses on their website to learn game development. I gained a lot of knowledge about the game design process and the basics of programming from the time I spent in Unity. After that, I took what I had learned and decided to try to make some mods for a game I play, called <u><a href="https://satisfactorygame.com" class="standard-link">Satisfactory</a></u>. This led me to create 4 mods, which I published on <u><a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="standard-link">ficsit.app</a></u> and <u><a href="https://github.com/SpaceGameDev568?tab=repositories" class="standard-link">GitHub</a></u>. If you would like, you can read more about them on the <u><a href="projects.html" class="standard-link">projects page</a></u>.
+        <br><br>
+        
+        When <u><a href="https://unrealengine.com" class="standard-link">Unreal Engine 5</a></u> launched in April 2022, I chose to focus my efforts for a while on learning how to use it to get some experience using industry standard software. In late 2022, I began working on a website for myself to show off my skills and to attain some knowledge of HTML, CSS, and Javascript. I also gained some familiarity with <u><a href="https://git-scm.com" class="standard-link">Git</a></u> and <u><a href="https://perforce.com" class="standard-link">Perforce</a></u> for version control of these projects. Most recently, I have been learning programming with <u><a href="https://go.dev" class="standard-link">Go</a></u> to create a <u><a href="https://github.com/SpaceGameDev568/Charles" class="standard-link">command line application</a></u> to automate some basic computing tasks and to make it easier for me to debug issues with other apps.</p>
+      </center>
     </section>
-
+    <br><br>
+    <center><hr class="vertical-section-divider"></center>
+    <section class="experience">
+      <br><br>
+      <center><p class="experience-header">My Skills</p>
+        <br><br>
+        <p class="skills">
+        <b style="color:#1d68a4">Programming Languages:</b>
+        <br><br>
+        Blueprints
+        <br>
+        CSS
+        <br>
+        Go
+        <br>
+        HTML
+        <br><br>
+        <b style="color:#1d68a4">Software:</b>
+        <br><br>
+        Adobe Creative Cloud
+        <br>
+        Blender
+        <br>     
+        Docker
+        <br>
+        GIMP
+        <br>
+        Git
+        <br>
+        Perforce
+        <br>
+        Unity
+        <br>
+        Unreal Engine 4/5
+        <br>
+        Visual Studio/VS Code
+        <br>
+        VMware Workstation
+        </p></center>
+    </section>
+    <br><br>
+    <center><hr class="vertical-section-divider"></center>
+    <section class="contact">
+    <br><br>
+    <center><p class="contact-header">Contact Me</p></center>
+    <p class="contact-p">
+      <br><br>
+      If you would like to contact me about something, please use one of the below methods to reach out. If you need help with one of my projects, please visit the <a href="support.html" class="standard-link">support page</a> for info on how to submit a request.
+      <br><br>
+      By Email: <a href="mailto:space@spacegamedev.com" class="standard-link">space@spacegamedev.com</a>
+      <br><br>
+      By Discord: <a href="https://discord.com/app" class="standard-link">SpaceGameDev568 #0596</a>
+    </p>
+    </section><br><br>
+    <center><hr class="vertical-section-divider"></center>
+    <section class="socials"><br><br>
+    <center><p class="socials-header">My Socials</p></center>
+    <br><br>
+    <center><p class="socials-p">
+      <a href="https://github.com/SpaceGameDev568" class="standard-link">GitHub</a>
+      <br><br>
+      <a href="https://www.linkedin.com/in/jesse-hodgson-22aba626b/" class="standard-link">LinkedIn</a>
+      <br><br>
+      <a href="https://youtube.com/@spacegamedev" class="standard-link">YouTube</a>
+      <br><br>
+      <a href="https://steamcommunity.com/id/spacegamedev/" class="standard-link">Steam</a>
+      <br><br>
+      <a href="https://trello.com/u/spacegamedev568/activity" class="standard-link">Trello</a>
+      <br><br>
+      <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="standard-link">Satisfactory Mod Repository</a>
+      <br><br>
+    </p></center>
+    </section>
+    <section class="footer">
+    <center><p class="footer-p">
+      <br><br>
+      Copyright © 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
+      This website is an open source project, and the source code can be found on GitHub <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="standard-link">here</a>.
+    </p>
+    <br><br>
+    <p class="attribution">
+      Performance and security by Cloudflare.
+      <br><br>
+      Fonts used:
+      <br><br>
+      Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="standard-link">Comfortaa on Google Fonts</a>
+      <br>
+      Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="standard-link">Open Sans on Google Fonts</a>
+      <br>
+      Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="standard-link">Orbitron on Google Fonts</a>
+    </p></center>
+    </section>
   </body>
 
 </html>
