New Site Deployment

--- a/Support.html
+++ b/Support.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="css\projects.css">
+    <link rel="stylesheet" href="css\support.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
   <!-- End Head, Start Body -->
@@ -95,6 +95,15 @@
         localStorage.setItem("theme", theme);
       });
     </script>
+
+<section class="support"><br><br><br><br><br>
+<center><p class="support-header">Support</p><br><br>
+    <p class="support-p">If you need help with one of my projects, please submit a ticket through the Freshdesk portal or send an email to me.
+    <br><br><br>
+    <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Freshdesk portal</a>
+    <br><br><br><br>
+    By Email: <a href="mailto:support@spacegamedev.com" class="standard-link">support@spacegamedev.com</a></p></center>
+</section><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <section class="footer">
     <center><p class="footer-p">
