--- a/downloads.html
+++ b/downloads.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="css\projects.css">
+    <link rel="stylesheet" href="css\downloads.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
   <!-- End Head, Start Body -->
@@ -95,6 +95,20 @@
         localStorage.setItem("theme", theme);
       });
     </script>
+
+<section class="downloads"><br><br><br><br><br><br>
+<center><p class="downloads-header">Download Centre</p></center>
+<br><br><br><br>
+<center><div class="charles-download">
+    <p class="download-desc">Download the latest release of Charles from GitHub.</p><br>
+    <a href="https://github.com/SpaceGameDev568/Charles/releases" class="download-link">Download</a>
+</div></center>
+<br><br><br><br>
+<center><div class="charles-download">
+    <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the Satisfactory Mod Manager</p><br>
+    <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a>
+</div></center><br><br><br><br><br><br><br><br>
+</section>
 
 <section class="footer">
     <center><p class="footer-p">
