--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <br><br>
       By Email: <a href="mailto:space@spacegamedev.com" class="standard-link">space@spacegamedev.com</a>
       <br><br>
-      By Discord: <a href="https://discord.com/app" class="standard-link">SpaceGameDev568 #0596</a>
+      Discord: <a href="https://discord.com/app" class="standard-link">SpaceGameDev568 #0596</a>
     </p>
     </section><br><br>
     <center><hr class="vertical-section-divider"></center>
