Optimization and accessibility updates

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,13 +37,13 @@
     <div class="header">
       <div class="header-bg"></div>
       <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
-      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"></button>
+      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
       <center>
-      <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
+      <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
       </center>
-      <a href="javascript:void(0)" class="btn-toggle" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg"></a>
+      <a href="javascript:void(0)" class="btn-toggle" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></a>
       <div id="websidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton"></a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton" alt="Close Navigation" aria-label="Close the navigation bar."></a>
         <a href="index.html" class="sidebar-link">home</a>
         <a href="projects.html" class="sidebar-link">projects</a>
         <a href="downloads.html" class="sidebar-link">downloads</a>
@@ -100,7 +100,7 @@
     <section class="bio-short">
       <center>
       <br><br><br><br><br><br>
-      <img class="sgd-logo" src="https://assets.spacegamedev.com/images\webp\sgd-logo.webp">
+      <img class="sgd-logo" src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-256.webp" alt="SpaceGameDev's Avatar">
       <br><br>
       <div class="intro">
         <p>
@@ -135,7 +135,7 @@
       <center><p class="experience-header">My Skills</p>
         <br><br>
         <p class="skills">
-        <b style="color:#1d68a4">Programming Languages:</b>
+        <b class="experience-minor-h">Programming Languages:</b>
         <br><br>
         Blueprints
         <br>
@@ -145,7 +145,7 @@
         <br>
         HTML
         <br><br>
-        <b style="color:#1d68a4">Software:</b>
+        <b class="experience-minor-h">Software:</b>
         <br><br>
         Adobe Creative Cloud
         <br>
