More CLS changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <!-- Google tag (gtag.js) https://analytics.google.com/analytics/web/#/p360946171/reports/intelligenthome -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YLEB435KG"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YLEB435KG" defer></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
