--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jesse Hodgson's personal projects.">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
@@ -89,7 +90,7 @@
     <center><p class="footer-p">
       <br><br>
       Copyright © 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
-      This website is an open source project, and the source code can be found on GitHub <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="standard-link">here</a>.
+      This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="standard-link">GitHub</a>.
     </p>
     <br><br>
     <p class="attribution">
