--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jesse Hodgson - Software Developer and Digital Artist">
+    <meta name="description" content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
