Minor UX Improvements

--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,6 @@
     <!-- Start Header Section -->
     <div class="header">
       <div class="header-bg"></div>
-      <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
       <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
       <center>
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
@@ -44,13 +43,13 @@
 
 <section class="downloads"><br><br><br><br><br><br>
 <center><p class="downloads-header">Download Centre</p></center>
-<br><br><br><br>
-<center><div class="charles-download">
+<!--<br><br><br><br>
+<center><div class="project-download">
     <p class="download-desc">Download the latest release of Charles from GitHub.</p><br>
     <a href="https://github.com/SpaceGameDev568/Charles/releases" class="download-link">Download</a>
-</div></center>
+</div></center>-->
 <br><br><br><br>
-<center><div class="charles-download">
+<center><div class="project-download">
     <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the Satisfactory Mod Manager</p><br>
     <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a>
 </div></center><br><br><br><br><br><br><br><br>
