--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
       <br><br>
       <a href="https://trello.com/u/spacegamedev568/activity" class="standard-link">Trello</a>
       <br><br>
+<!--  <a href="https://g.dev/spacegamedev" class="standard-link">Google Developers</a>
+      <br><br>--> 
       <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="standard-link">Satisfactory Mod Repository</a>
       <br><br>
     </p></center>
