--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
     <link rel="stylesheet" href="css\home.css">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2">
+    <!-- Unused <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2"> -->
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2">
   </head>
   <!-- End Head, Start Body -->
   <body>
@@ -50,7 +50,7 @@
     <section class="bio-short">
       <center>
       <br><br><br><br><br><br>
-      <img class="sgd-logo" src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-256.webp" alt="SpaceGameDev's Avatar">
+      <img class="sgd-logo" src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-384.webp" alt="SpaceGameDev's Avatar">
       <br><br>
       <div class="intro">
         <p>
@@ -157,7 +157,7 @@
     <center><p class="footer-p">
       <br><br>
       Copyright © 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
-      This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="standard-link">GitHub</a>.
+      This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
     </p>
     <br><br>
     <p class="attribution">
@@ -165,11 +165,11 @@
       <br><br>
       Fonts used:
       <br><br>
-      Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="standard-link">Comfortaa on Google Fonts</a>
+      Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="footer-link">Comfortaa on Google Fonts</a>
       <br>
-      Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="standard-link">Open Sans on Google Fonts</a>
+      Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="footer-link">Open Sans on Google Fonts</a>
       <br>
-      Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="standard-link">Orbitron on Google Fonts</a>
+      Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google Fonts</a>
     </p></center>
     </section>
   </body>
