--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <br><br>
       <div class="about-short">
         <p>
-          I'm Jesse Hodgson, more commonly known by my alias: SpaceGameDev,<br> and I'm a Software Developer from Charlotte, North Carolina, in the United States.
+          I'm Jesse, more commonly known by my alias: SpaceGameDev,<br> and I'm a Software Developer from Charlotte, North Carolina, in the United States.
         </p>
       </div><br></center>
     </section>
